--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-lang-code-flags": "^1.0.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
